--- a/client/styles/mixins.import.less
+++ b/client/styles/mixins.import.less
@@ -14,6 +14,7 @@
 
 @white : #E6DDDE;
 @brand : #916A70;
+@richer: saturate(@brand, 33%);
 // @brand : #F79083;
 // @brand: #F1693D;
 @blue : #0B337D;
